--- a/style.css
+++ b/style.css
@@ -1,4 +1,85 @@
+@import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Open+Sans:wght@300&family=Outfit&display=swap");
+
+body {
+  background-color: hsl(212, 45%, 89%);
+  font-size: 15px;
+  width: 1440px;
+}
+
+.frame {
+  position: absolute;
+  width: 250px;
+  height: 400px;
+  top: 50%;
+  left: 60%;
+  margin-top: -200px;
+  margin-left: -200px;
+  background: hsl(0, 0%, 100%);
+  border-radius: 13px;
+  box-shadow: 1px 2px 5px 2px rgba(90, 90, 90, 0.3);
+}
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 48.5%;
+  transform: translate(-50%, -50%);
+}
+
+.frame .center p {
+  font-family: "Outfit", sans-serif;
+  text-align: center;
+  font-size: 1em;
+  line-height: 1.2em;
+}
+
 img {
   width: 200px;
-  border-radius: 5px;
+  border-radius: 13px;
+  box-shadow: 1px 2px 3px 2px hsl(220, 15%, 55%);
+}
+
+footer {
+  margin-top: 40%;
+  font-family: "Luxurious Roman", cursive;
+}
+
+.attribution {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+  text-decoration: none;
+}
+
+footer .attribution a:hover {
+  color: hsl(228, 56%, 43%);
+  border-bottom: 2px solid hsl(228, 56%, 43%);
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    width: 100%;
+    background: hsl(212, 45%, 89%);
+  }
+  .frame {
+    left: 65%;
+  }
+  .center {
+    margin-top: 3%;
+  }
+  footer {
+    position: absolute;
+    bottom: 3%;
+    font-family: "Luxurious Roman", cursive;
+  }
+  footer .attribution a {
+    text-decoration: none;
+  }
+  footer .attribution a:hover {
+    color: hsl(228, 56%, 43%);
+    border-bottom: 2px solid hsl(228, 56%, 43%);
+  }
 }
