--- a/style.css
+++ b/style.css
@@ -1,85 +1,88 @@
-@import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Open+Sans:wght@300&family=Outfit&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Inter:wght@500&family=Kumbh+Sans&family=Lexend+Deca:wght@500&family=Outfit:wght@500&display=swap");
+
+:root {
+  --main-bg: hsl(212, 45%, 89%);
+  --card-gb: white;
+  --font-color: hsl(220, 15%, 55%);
+  --font-weight-big: 700;
+  --font-weight-sm: 400;
+  --font-main: "Outfit", sans-serif;
+  --font-footer: "Inter", sans-serif;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
 
 body {
-  background-color: hsl(212, 45%, 89%);
-  font-size: 15px;
-  width: 1440px;
+  background-color: var(--main-bg);
+  font-family: var(--font-main);
 }
 
-.frame {
-  position: absolute;
+/* card position */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--card-gb);
   width: 250px;
-  height: 400px;
-  top: 50%;
-  left: 60%;
-  margin-top: -200px;
-  margin-left: -200px;
-  background: hsl(0, 0%, 100%);
-  border-radius: 13px;
-  box-shadow: 1px 2px 5px 2px rgba(90, 90, 90, 0.3);
-}
-
-.center {
-  position: absolute;
-  left: 50%;
-  top: 48.5%;
-  transform: translate(-50%, -50%);
-}
-
-.frame .center p {
-  font-family: "Outfit", sans-serif;
-  text-align: center;
-  font-size: 1em;
-  line-height: 1.2em;
+  margin: 7rem auto;
+  border-radius: 1.5rem;
+  padding: 2rem;
+  box-shadow: 0 1px 10px var(--main-bg);
 }
 
 img {
-  width: 200px;
-  border-radius: 13px;
-  box-shadow: 1px 2px 3px 2px hsl(220, 15%, 55%);
+  width: 100%;
+  border-radius: 1.5rem;
 }
 
-footer {
-  margin-top: 40%;
-  font-family: "Luxurious Roman", cursive;
-}
-
-.attribution {
-  font-size: 1.5em;
+h1,
+p {
   text-align: center;
 }
 
+h1 {
+  font-weight: var(--font-weight-big);
+}
+
+p {
+  font-weight: var(--font-weight-sm);
+  color: var(--font-color);
+  font-size: 1.5rem;
+}
+
+.attribution {
+  font-family: var(--font-footer);
+  text-align: center;
+  font-size: 1.8rem;
+  margin-top: -5rem;
+}
+
 .attribution a {
-  color: hsl(228, 45%, 44%);
   text-decoration: none;
 }
 
-footer .attribution a:hover {
-  color: hsl(228, 56%, 43%);
-  border-bottom: 2px solid hsl(228, 56%, 43%);
+.attribution a:hover {
+  color: violet;
 }
 
-@media screen and (max-width: 500px) {
-  body {
-    width: 100%;
-    background: hsl(212, 45%, 89%);
+.attribution a:active {
+  color: red;
+}
+
+/* for mobile */
+@media screen and (max-width: 375px) {
+  .container {
+    width: 80%;
+    margin: 3rem auto;
   }
-  .frame {
-    left: 65%;
-  }
-  .center {
-    margin-top: 3%;
-  }
-  footer {
-    position: absolute;
-    bottom: 3%;
-    font-family: "Luxurious Roman", cursive;
-  }
-  footer .attribution a {
-    text-decoration: none;
-  }
-  footer .attribution a:hover {
-    color: hsl(228, 56%, 43%);
-    border-bottom: 2px solid hsl(228, 56%, 43%);
+
+  .attribution {
+    margin-top: 0;
   }
 }
